# lf-tracking

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  tracker_csrt.py  tracker_mixformer.py  tracker_mixformer_onnx.py
archive/: README.md  main.py
archive/experimental/: main_robust.py
archive/iterations/: best_tracker_v10.py  best_tracker_v11.py  best_tracker_v12.py  best_tracker_v13.py  best_tracker_v14.py  best_tracker_v15.py  best_tracker_v16.py  best_tracker_v16v2.py  best_tracker_v16v3.py  best_tracker_v16v4.py  best_tracker_v16v5.py  best_tracker_v16v6.py  best_tracker_v16v7.py  best_tracker_v16v8.py  best_tracker_v17.py  best_tracker_v17_fork2.py  best_tracker_v17v10.py  best_tracker_v17v2.py  best_tracker_v17v3.py  best_tracker_v17v4.py  best_tracker_v17v5.py  best_tracker_v17v6.py  best_tracker_v17v7.py  best_tracker_v17v8.py  best_tracker_v17v8v2.py  best_tracker_v17v8v3.py  best_tracker_v17v8v4.py  best_tracker_v18.py  best_tracker_v18v2.py  best_tracker_v3.py  best_tracker_v4.py  best_tracker_v5.py  best_tracker_v6.py  best_tracker_v7.py  best_tracker_v8.py  best_tracker_v9.py
archive/modules/: phase_detector.py
archive/old_trackers/: best_tracker.py  best_tracker_v2.py  capturebbox.py  diagnose.py  fast_tracker.py  fast_tracker_v2.py  robust_fast_tracker.py  track.py  track1.py  track2.py  track3.py  trackjk.py  tracle.py
core/: __init__.py  motion_compensation.py  pipeline.py  search_region.py
scripts/: export_onnx.py
trackers/: __init__.py  ekf_tracker.py  mixformer_onnx.py  mixformer_pytorch.py
(+5 files in other folders)
